# jysp

./: .gitignore  JYSP.drawio  README.md
backend/: .env.example  Dockerfile  eslint.config.mjs  nest-cli.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/channel/: channel.controller.ts  channel.entity.ts  channel.module.ts  (+1 more)
backend/src/channel-relation/: channel-relation.controller.ts  channel-relation.entity.ts  channel-relation.module.ts  channel-relation.service.ts
bot/: main.py  pyproject.toml
bot/bot/: config.py  misc.py
bot/bot/dialogs/: __init__.py  channel.py  start.py
bot/bot/handlers/: __init__.py  pm.py  start.py
bot/bot/keyboards/: __init__.py  start.py
bot/bot/middlewares/: __init__.py  delete_message.py  i18n.py  register.py
bot/bot/services/: api.py
bot/bot/states/: __init__.py  channel.py  channel_relation.py  main.py
bot/bot/utils/: get_chat_owner.py
bot/bot/widgets/: __init__.py  i18n.py
bot/locales/: messages.pot
bot/locales/ru/LC_MESSAGES/: messages.mo  messages.po
listener/: .env.example  Dockerfile  main.py  pyproject.toml
listener/listener/: config.py
listener/listener/filters/: __init__.py  backend_check.py  media_type.py  once_media.py  service_type.py
listener/listener/handlers/: __init__.py  base.py  media.py  media_group.py  text.py
listener/listener/services/: __init__.py  api.py  rmq.py
listener/listener/strategies/: __init__.py  ai.py  base.py  composite.py  formatting.py  media.py  media_group.py  stop_words.py
listener/listener/types/: __init__.py  send_data.py
listener/listener/utils/: __init__.py  to_bytes.py
publisher/: .env.example  Dockerfile  main.py  pyproject.toml
publisher/publisher/: config.py
publisher/publisher/services/: __init__.py  api.py  publisher.py  rmq.py
publisher/publisher/services/strategies/: __init__.py  base.py  media.py  media_group.py  text.py
publisher/publisher/utils/: __init__.py  text2msg.py
unifier/: .env.example  Dockerfile  main.py  pyproject.toml
unifier/unifier/: config.py
unifier/unifier/services/: __init__.py  rmq.py
unifier/unifier/services/unifier/: __init__.py  base.py  g4f.py
unifier/unifier/utils/: extract_unique_text.py  to_bytes.py
(+31 files in other folders)
