[tool.poetry]
name = "listener"
version = "0.1.0"
description = ""
authors = ["Serik Urazmaxambetov <serikurazmaxambetov.v2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyrofork = "^2.3.48"
tgcrypto = "^1.2.5"
aiohttp = "^3.11.2"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
remove-all-unused-imports = true
