[tool.poetry]
name = "unifier"
version = "0.1.0"
description = ""
authors = ["Serik Urazmaxambetov <serikurazmaxambetov.v2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
g4f = "^0.3.4.4"
aiolimiter = "^1.1.0"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
